--- a/index.ipynb
+++ b/index.ipynb
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1155,40 +1155,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>A-Bomb</th>\n",
-       "      <td>Male</td>\n",
+       "      <th>Angel Dust</th>\n",
+       "      <td>Female</td>\n",
        "      <td>yellow</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>No Hair</td>\n",
-       "      <td>203.0</td>\n",
+       "      <td>Mutant</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>165.0</td>\n",
        "      <td>Marvel Comics</td>\n",
        "      <td>-</td>\n",
        "      <td>good</td>\n",
-       "      <td>441.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abe Sapien</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>Icthyo Sapien</td>\n",
-       "      <td>No Hair</td>\n",
-       "      <td>191.0</td>\n",
-       "      <td>Dark Horse Comics</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>good</td>\n",
-       "      <td>65.0</td>\n",
+       "      <td>57.0</td>\n",
        "      <td>True</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
@@ -1203,64 +1179,88 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Abin Sur</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>Ungaran</td>\n",
-       "      <td>No Hair</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>DC Comics</td>\n",
-       "      <td>red</td>\n",
-       "      <td>good</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abomination</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>green</td>\n",
-       "      <td>Human / Radiation</td>\n",
-       "      <td>No Hair</td>\n",
-       "      <td>203.0</td>\n",
-       "      <td>Marvel Comics</td>\n",
+       "      <th>Angel Salvadore</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>brown</td>\n",
        "      <td>-</td>\n",
-       "      <td>bad</td>\n",
-       "      <td>441.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abraxas</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>Cosmic Entity</td>\n",
        "      <td>Black</td>\n",
-       "      <td>-99.0</td>\n",
+       "      <td>163.0</td>\n",
        "      <td>Marvel Comics</td>\n",
+       "      <td>-</td>\n",
+       "      <td>good</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Angela</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-99.0</td>\n",
+       "      <td>Image Comics</td>\n",
        "      <td>-</td>\n",
        "      <td>bad</td>\n",
        "      <td>-99.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arachne</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>Blond</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>Marvel Comics</td>\n",
+       "      <td>-</td>\n",
+       "      <td>good</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arclight</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>violet</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Purple</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>Marvel Comics</td>\n",
+       "      <td>-</td>\n",
+       "      <td>bad</td>\n",
+       "      <td>57.0</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
@@ -1280,51 +1280,51 @@
        "</div>"
       ],
       "text/plain": [
-       "            Gender Eye color               Race Hair color  Height  \\\n",
-       "A-Bomb        Male    yellow              Human    No Hair   203.0   \n",
-       "Abe Sapien    Male      blue      Icthyo Sapien    No Hair   191.0   \n",
-       "Abin Sur      Male      blue            Ungaran    No Hair   185.0   \n",
-       "Abomination   Male     green  Human / Radiation    No Hair   203.0   \n",
-       "Abraxas       Male      blue      Cosmic Entity      Black   -99.0   \n",
+       "                 Gender Eye color    Race Hair color  Height      Publisher  \\\n",
+       "Angel Dust       Female    yellow  Mutant      Black   165.0  Marvel Comics   \n",
+       "Angel Salvadore  Female     brown       -      Black   163.0  Marvel Comics   \n",
+       "Angela           Female         -       -          -   -99.0   Image Comics   \n",
+       "Arachne          Female      blue   Human      Blond   175.0  Marvel Comics   \n",
+       "Arclight         Female    violet       -     Purple   173.0  Marvel Comics   \n",
        "\n",
-       "                     Publisher Skin color Alignment  Weight Agility  \\\n",
-       "A-Bomb           Marvel Comics          -      good   441.0   False   \n",
-       "Abe Sapien   Dark Horse Comics       blue      good    65.0    True   \n",
-       "Abin Sur             DC Comics        red      good    90.0   False   \n",
-       "Abomination      Marvel Comics          -       bad   441.0   False   \n",
-       "Abraxas          Marvel Comics          -       bad   -99.0   False   \n",
+       "                Skin color Alignment  Weight Agility    ...     Web Creation  \\\n",
+       "Angel Dust               -      good    57.0    True    ...            False   \n",
+       "Angel Salvadore          -      good    54.0   False    ...            False   \n",
+       "Angela                   -       bad   -99.0   False    ...            False   \n",
+       "Arachne                  -      good    63.0    True    ...             True   \n",
+       "Arclight                 -       bad    57.0   False    ...            False   \n",
        "\n",
-       "               ...     Web Creation Reality Warping Odin Force  \\\n",
-       "A-Bomb         ...            False           False      False   \n",
-       "Abe Sapien     ...            False           False      False   \n",
-       "Abin Sur       ...            False           False      False   \n",
-       "Abomination    ...            False           False      False   \n",
-       "Abraxas        ...            False           False      False   \n",
+       "                Reality Warping Odin Force Symbiote Costume Speed Force  \\\n",
+       "Angel Dust                False      False            False       False   \n",
+       "Angel Salvadore           False      False            False       False   \n",
+       "Angela                    False      False            False       False   \n",
+       "Arachne                   False      False            False       False   \n",
+       "Arclight                  False      False            False       False   \n",
        "\n",
-       "            Symbiote Costume Speed Force Phoenix Force Molecular Dissipation  \\\n",
-       "A-Bomb                 False       False         False                 False   \n",
-       "Abe Sapien             False       False         False                 False   \n",
-       "Abin Sur               False       False         False                 False   \n",
-       "Abomination            False       False         False                 False   \n",
-       "Abraxas                False       False         False                 False   \n",
+       "                Phoenix Force Molecular Dissipation Vision - Cryo Omnipresent  \\\n",
+       "Angel Dust              False                 False         False       False   \n",
+       "Angel Salvadore         False                 False         False       False   \n",
+       "Angela                  False                 False         False       False   \n",
+       "Arachne                 False                 False         False       False   \n",
+       "Arclight                False                 False         False       False   \n",
        "\n",
-       "            Vision - Cryo Omnipresent Omniscient  \n",
-       "A-Bomb              False       False      False  \n",
-       "Abe Sapien          False       False      False  \n",
-       "Abin Sur            False       False      False  \n",
-       "Abomination         False       False      False  \n",
-       "Abraxas             False       False      False  \n",
+       "                Omniscient  \n",
+       "Angel Dust           False  \n",
+       "Angel Salvadore      False  \n",
+       "Angela               False  \n",
+       "Arachne              False  \n",
+       "Arclight             False  \n",
        "\n",
        "[5 rows x 176 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "male_df.head()"
+    "female_df.head()"
    ]
   },
   {
